--- a/chart/src/index.html
+++ b/chart/src/index.html
@@ -1,19 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>Spotimy</title>
+
+    <link rel="stylesheet" href="static/styles.css">
   </head>
+
+  <br/>
+  <h1>My Spotify data, visualized</h1>
+  <br/>
+
+  <p>Taking a look at some data from the Spotify API using Python and Chart.js...</p>
+  <br/>
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <body>
-    <!-- <div style="width: 500px;"><canvas id="dimensions"></canvas></div><br/> -->
-    <div style="width: 800px;"><canvas id="mychart"></canvas></div><br/>
+    <div class="outbox">
+      <div class="container">
+        <canvas id="myChart"></canvas>
+      </div>
+    </div>
+    <br/>
+
     <script type="text/javascript" src="{{ url_for('static', filename='index.js')}}"></script>
     <script type="text/javascript">
-      drawLoudnessEnergyBubble("{{ title }}",
-       {{ dataShort | safe }},
-       {{ dataMid | safe }},
-       {{ dataLong | safe }}
+      drawLoudnessEnergyBubble(
+        "{{ loudnessTitle }}",
+       {{ loudnessEnergyDataShort | safe }},
+       {{ loudnessEnergyDataMid | safe }},
+       {{ loudnessEnergyDataLong | safe }}
       );
     </script>
+
+    <div class="outbox">
+      <div class="container">
+        <canvas id="myChart2"></canvas>
+      </div>
+    </div>
+    <br/>
+
+    <script type="text/javascript" src="{{ url_for('static', filename='index.js')}}"></script>
+    <script type="text/javascript">
+      drawTopGenresBar(
+        "{{ genreCountsTitle }}",
+        {{ genreCountsLabels | safe }},
+        {{ genreCountsDataShort | safe }},
+        {{ genreCountsDataMid | safe }},
+        {{ genreCountsDataLong | safe }}
+      );
+    </script>
+
   </body>
 </html>
